# src/main/java/com/garajeideas/coursemanagement/dtos/Student.java
@@ -1,0 +1,52 @@
+package com.garajeideas.coursemanagement.dtos;
+
+import lombok.NoArgsConstructor;
+
+import javax.persistence.Column;
+import javax.validation.constraints.NotBlank;
+import javax.validation.constraints.NotNull;
+import javax.validation.constraints.Past;
+import javax.validation.constraints.Size;
+import java.time.Instant;
+import java.util.List;
+
+@NoArgsConstructor
+public class Student {
+
+	private Long id;
+	private String firstName;
+	private String lastName;
+	private Instant birthDate;
+
+	public Long getId() {
+		return id;
+	}
+
+	public void setId(Long id) {
+		this.id = id;
+	}
+
+	public String getFirstName() {
+		return firstName;
+	}
+
+	public void setFirstName(String firstName) {
+		this.firstName = firstName;
+	}
+
+	public String getLastName() {
+		return lastName;
+	}
+
+	public void setLastName(String lastName) {
+		this.lastName = lastName;
+	}
+
+	public Instant getBirthDate() {
+		return birthDate;
+	}
+
+	public void setBirthDate(Instant birthDate) {
+		this.birthDate = birthDate;
+	}
+}
